--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     # only run when a pull request is opened
     if: github.event_name == 'pull_request'
+    environment: review
     steps:
       - name: Cloning repo
         uses: actions/checkout@v2
