--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Push to dokku
         uses: dokku/github-action@master
         with:
-          git_remote_url: ${{ secrets.GIT_REMOTE_URL }}
+          git_remote_url: 'ssh://dokku@dokku.proxima-web.com:22/github-actions-demo-app'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Set GitHub deployment status to success
